--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
-	<title></title>
+	<title>演習1-5</title>
 
 </head>
 
 <body>
+
+	<div class="main-visual-content1"></div>
+	<div class="main-visual-content2"></div>
+	<div class="main-visual-content3"></div>
+	<div class="main-visual-content4"></div>
 
 </body>
 
